- added agent type labels in agent report dataframe

--- a/notebooks/Agent Based Simulation Long-Run Analysis with Snipers and Liquidators (1m data quoted in ETH).ipynb
+++ b/notebooks/Agent Based Simulation Long-Run Analysis with Snipers and Liquidators (1m data quoted in ETH).ipynb
@@ -788,7 +788,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10081/10081 [00:11<00:00, 879.63it/s] \n"
+      "100%|██████████| 10081/10081 [00:12<00:00, 823.58it/s] \n"
      ]
     }
    ],
@@ -810,10 +810,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "open positions on EOS-ETH = 1\n",
-      "open positions on MKR-ETH = 0\n",
-      "open positions on OVL-ETH = 18\n",
-      "open positions on XRP-ETH = 16\n"
+      "open positions on EOS-ETH = 4\n",
+      "open positions on MKR-ETH = 2\n",
+      "open positions on OVL-ETH = 34\n",
+      "open positions on XRP-ETH = 2\n"
      ]
     }
    ],
@@ -836,7 +836,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 501/501 [00:00<00:00, 1124.12it/s]\n"
+      "100%|██████████| 501/501 [00:00<00:00, 1081.97it/s]\n"
      ]
     }
    ],
@@ -1042,7 +1042,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>0.199690</td>\n",
-       "      <td>-0.202867</td>\n",
+       "      <td>-0.069037</td>\n",
        "      <td>0.444773</td>\n",
        "      <td>5.772809e-01</td>\n",
        "      <td>0.021524</td>\n",
@@ -1050,7 +1050,7 @@
        "      <td>0.000440</td>\n",
        "      <td>0.002268</td>\n",
        "      <td>0.025823</td>\n",
-       "      <td>3.322063</td>\n",
+       "      <td>3.879801</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1058,15 +1058,15 @@
        "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>40999.40</td>\n",
-       "      <td>0.60</td>\n",
+       "      <td>40999.85</td>\n",
+       "      <td>0.15</td>\n",
        "      <td>28500.0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0.199690</td>\n",
-       "      <td>0.060786</td>\n",
+       "      <td>-0.014700</td>\n",
        "      <td>0.444773</td>\n",
        "      <td>5.772809e-01</td>\n",
        "      <td>0.021524</td>\n",
@@ -1074,7 +1074,7 @@
        "      <td>0.000440</td>\n",
        "      <td>0.002268</td>\n",
        "      <td>0.025823</td>\n",
-       "      <td>4.420837</td>\n",
+       "      <td>4.106250</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
@@ -1082,15 +1082,15 @@
        "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>40998.65</td>\n",
-       "      <td>1.35</td>\n",
+       "      <td>40999.70</td>\n",
+       "      <td>0.30</td>\n",
        "      <td>28500.0</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>0.199690</td>\n",
-       "      <td>-0.101655</td>\n",
+       "      <td>-0.014700</td>\n",
        "      <td>0.444773</td>\n",
        "      <td>5.772809e-01</td>\n",
        "      <td>0.021524</td>\n",
@@ -1098,16 +1098,16 @@
        "      <td>0.000440</td>\n",
        "      <td>0.002268</td>\n",
        "      <td>0.025823</td>\n",
-       "      <td>3.743864</td>\n",
+       "      <td>4.106250</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0</td>\n",
-       "      <td>3</td>\n",
+       "      <td>2</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>40998.20</td>\n",
-       "      <td>1.80</td>\n",
+       "      <td>40999.70</td>\n",
+       "      <td>0.30</td>\n",
        "      <td>28500.0</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -1120,16 +1120,16 @@
        "   d-EOS-ETH  d-MKR-ETH  d-OVL-ETH     d-XRP-ETH  s-EOS-ETH  s-MKR-ETH  \\\n",
        "0   0.000000   0.000000   0.000000 -1.212483e-16   0.025823   4.100000   \n",
        "1   0.243522   0.178218   0.687998  2.034183e-01   0.020766   3.479833   \n",
-       "2   0.199690  -0.202867   0.444773  5.772809e-01   0.021524   4.167512   \n",
-       "3   0.199690   0.060786   0.444773  5.772809e-01   0.021524   4.167512   \n",
-       "4   0.199690  -0.101655   0.444773  5.772809e-01   0.021524   4.167512   \n",
+       "2   0.199690  -0.069037   0.444773  5.772809e-01   0.021524   4.167512   \n",
+       "3   0.199690  -0.014700   0.444773  5.772809e-01   0.021524   4.167512   \n",
+       "4   0.199690  -0.014700   0.444773  5.772809e-01   0.021524   4.167512   \n",
        "\n",
        "   s-OVL-ETH  s-XRP-ETH  f-EOS-ETH  f-MKR-ETH  ...  Skew OVL-ETH  \\\n",
        "0   0.000636   0.003577   0.025823   4.100000  ...           0.0   \n",
        "1   0.000377   0.002972   0.025823   4.100000  ...           0.0   \n",
-       "2   0.000440   0.002268   0.025823   3.322063  ...           0.0   \n",
-       "3   0.000440   0.002268   0.025823   4.420837  ...           0.0   \n",
-       "4   0.000440   0.002268   0.025823   3.743864  ...           0.0   \n",
+       "2   0.000440   0.002268   0.025823   3.879801  ...           0.0   \n",
+       "3   0.000440   0.002268   0.025823   4.106250  ...           0.0   \n",
+       "4   0.000440   0.002268   0.025823   4.106250  ...           0.0   \n",
        "\n",
        "   Skew XRP-ETH  Number of Open Positions on EOS-ETH  \\\n",
        "0           0.0                                    0   \n",
@@ -1143,14 +1143,14 @@
        "1                                    0                                    0   \n",
        "2                                    1                                    0   \n",
        "3                                    2                                    0   \n",
-       "4                                    3                                    0   \n",
+       "4                                    2                                    0   \n",
        "\n",
        "   Number of Open Positions on XRP-ETH    Supply  Treasury  Liquidity  step  \n",
        "0                                    0  41000.00      0.00    28500.0     0  \n",
        "1                                    0  41000.00      0.00    28500.0     1  \n",
-       "2                                    0  40999.40      0.60    28500.0     2  \n",
-       "3                                    0  40998.65      1.35    28500.0     3  \n",
-       "4                                    0  40998.20      1.80    28500.0     4  \n",
+       "2                                    0  40999.85      0.15    28500.0     2  \n",
+       "3                                    0  40999.70      0.30    28500.0     3  \n",
+       "4                                    0  40999.70      0.30    28500.0     4  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
@@ -1625,7 +1625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-29T19:45:51.718459Z",
@@ -1635,12 +1635,13 @@
    "outputs": [],
    "source": [
     " wealth_df = \\\n",
-    "    monetary_model.data_collector.get_agent_report_dataframe('Wealth')"
+    "    monetary_model.data_collector.get_agent_report_dataframe('Wealth', \n",
+    "                                                             use_agent_types_in_header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 54,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-01-29T19:46:06.978975Z",
@@ -1669,27 +1670,27 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
-       "      <th>9</th>\n",
+       "      <th>MonetaryArbitrageur-0</th>\n",
+       "      <th>MonetaryArbitrageur-1</th>\n",
+       "      <th>MonetaryArbitrageur-2</th>\n",
+       "      <th>MonetaryArbitrageur-3</th>\n",
+       "      <th>MonetaryArbitrageur-4</th>\n",
+       "      <th>MonetaryArbitrageur-5</th>\n",
+       "      <th>MonetaryArbitrageur-6</th>\n",
+       "      <th>MonetaryArbitrageur-7</th>\n",
+       "      <th>MonetaryArbitrageur-8</th>\n",
+       "      <th>MonetaryArbitrageur-9</th>\n",
        "      <th>...</th>\n",
-       "      <th>115</th>\n",
-       "      <th>116</th>\n",
-       "      <th>117</th>\n",
-       "      <th>118</th>\n",
-       "      <th>119</th>\n",
-       "      <th>120</th>\n",
-       "      <th>121</th>\n",
-       "      <th>122</th>\n",
-       "      <th>123</th>\n",
-       "      <th>124</th>\n",
+       "      <th>MonetaryLiquidator-115</th>\n",
+       "      <th>MonetaryLiquidator-116</th>\n",
+       "      <th>MonetaryLiquidator-117</th>\n",
+       "      <th>MonetaryLiquidator-118</th>\n",
+       "      <th>MonetaryLiquidator-119</th>\n",
+       "      <th>MonetaryLiquidator-120</th>\n",
+       "      <th>MonetaryLiquidator-121</th>\n",
+       "      <th>MonetaryLiquidator-122</th>\n",
+       "      <th>MonetaryLiquidator-123</th>\n",
+       "      <th>MonetaryLiquidator-124</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1706,15 +1707,15 @@
        "      <td>100.0</td>\n",
        "      <td>100.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>104.038843</td>\n",
-       "      <td>100.477535</td>\n",
+       "      <td>101.543901</td>\n",
        "      <td>100.0</td>\n",
-       "      <td>118.088483</td>\n",
-       "      <td>100.758102</td>\n",
-       "      <td>101.592691</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>101.429343</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>109.70225</td>\n",
-       "      <td>100.843159</td>\n",
-       "      <td>105.090715</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>107.401005</td>\n",
        "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1730,15 +1731,15 @@
        "      <td>100.0</td>\n",
        "      <td>100.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>104.038843</td>\n",
-       "      <td>100.477535</td>\n",
+       "      <td>101.543901</td>\n",
        "      <td>100.0</td>\n",
-       "      <td>118.088483</td>\n",
-       "      <td>100.758102</td>\n",
-       "      <td>101.592691</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>101.429343</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>109.70225</td>\n",
-       "      <td>100.843159</td>\n",
-       "      <td>105.090715</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>107.401005</td>\n",
        "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1754,15 +1755,15 @@
        "      <td>100.0</td>\n",
        "      <td>100.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>104.038843</td>\n",
-       "      <td>100.477535</td>\n",
+       "      <td>101.543901</td>\n",
        "      <td>100.0</td>\n",
-       "      <td>118.088483</td>\n",
-       "      <td>100.758102</td>\n",
-       "      <td>101.592691</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>101.429343</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>109.70225</td>\n",
-       "      <td>100.843159</td>\n",
-       "      <td>105.090715</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>107.401005</td>\n",
        "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1778,15 +1779,15 @@
        "      <td>100.0</td>\n",
        "      <td>100.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>104.038843</td>\n",
-       "      <td>100.477535</td>\n",
+       "      <td>101.543901</td>\n",
        "      <td>100.0</td>\n",
-       "      <td>118.088483</td>\n",
-       "      <td>100.758102</td>\n",
-       "      <td>101.592691</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>101.429343</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>109.70225</td>\n",
-       "      <td>100.843159</td>\n",
-       "      <td>105.090715</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>107.401005</td>\n",
        "      <td>100.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1802,15 +1803,15 @@
        "      <td>100.0</td>\n",
        "      <td>100.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>104.038843</td>\n",
-       "      <td>100.477535</td>\n",
+       "      <td>101.543901</td>\n",
        "      <td>100.0</td>\n",
-       "      <td>118.088483</td>\n",
-       "      <td>100.758102</td>\n",
-       "      <td>101.592691</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>101.429343</td>\n",
+       "      <td>100.0</td>\n",
        "      <td>109.70225</td>\n",
-       "      <td>100.843159</td>\n",
-       "      <td>105.090715</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>107.401005</td>\n",
        "      <td>100.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1819,31 +1820,59 @@
        "</div>"
       ],
       "text/plain": [
-       "         0      1      2      3      4      5      6      7      8      9    \\\n",
-       "10576  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0   \n",
-       "10577  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0   \n",
-       "10578  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0   \n",
-       "10579  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0   \n",
-       "10580  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0  100.0   \n",
+       "       MonetaryArbitrageur-0  MonetaryArbitrageur-1  MonetaryArbitrageur-2  \\\n",
+       "10576                  100.0                  100.0                  100.0   \n",
+       "10577                  100.0                  100.0                  100.0   \n",
+       "10578                  100.0                  100.0                  100.0   \n",
+       "10579                  100.0                  100.0                  100.0   \n",
+       "10580                  100.0                  100.0                  100.0   \n",
        "\n",
-       "       ...         115         116    117         118         119         120  \\\n",
-       "10576  ...  104.038843  100.477535  100.0  118.088483  100.758102  101.592691   \n",
-       "10577  ...  104.038843  100.477535  100.0  118.088483  100.758102  101.592691   \n",
-       "10578  ...  104.038843  100.477535  100.0  118.088483  100.758102  101.592691   \n",
-       "10579  ...  104.038843  100.477535  100.0  118.088483  100.758102  101.592691   \n",
-       "10580  ...  104.038843  100.477535  100.0  118.088483  100.758102  101.592691   \n",
+       "       MonetaryArbitrageur-3  MonetaryArbitrageur-4  MonetaryArbitrageur-5  \\\n",
+       "10576                  100.0                  100.0                  100.0   \n",
+       "10577                  100.0                  100.0                  100.0   \n",
+       "10578                  100.0                  100.0                  100.0   \n",
+       "10579                  100.0                  100.0                  100.0   \n",
+       "10580                  100.0                  100.0                  100.0   \n",
        "\n",
-       "             121         122         123    124  \n",
-       "10576  109.70225  100.843159  105.090715  100.0  \n",
-       "10577  109.70225  100.843159  105.090715  100.0  \n",
-       "10578  109.70225  100.843159  105.090715  100.0  \n",
-       "10579  109.70225  100.843159  105.090715  100.0  \n",
-       "10580  109.70225  100.843159  105.090715  100.0  \n",
+       "       MonetaryArbitrageur-6  MonetaryArbitrageur-7  MonetaryArbitrageur-8  \\\n",
+       "10576                  100.0                  100.0                  100.0   \n",
+       "10577                  100.0                  100.0                  100.0   \n",
+       "10578                  100.0                  100.0                  100.0   \n",
+       "10579                  100.0                  100.0                  100.0   \n",
+       "10580                  100.0                  100.0                  100.0   \n",
+       "\n",
+       "       MonetaryArbitrageur-9  ...  MonetaryLiquidator-115  \\\n",
+       "10576                  100.0  ...              101.543901   \n",
+       "10577                  100.0  ...              101.543901   \n",
+       "10578                  100.0  ...              101.543901   \n",
+       "10579                  100.0  ...              101.543901   \n",
+       "10580                  100.0  ...              101.543901   \n",
+       "\n",
+       "       MonetaryLiquidator-116  MonetaryLiquidator-117  MonetaryLiquidator-118  \\\n",
+       "10576                   100.0                   100.0                   100.0   \n",
+       "10577                   100.0                   100.0                   100.0   \n",
+       "10578                   100.0                   100.0                   100.0   \n",
+       "10579                   100.0                   100.0                   100.0   \n",
+       "10580                   100.0                   100.0                   100.0   \n",
+       "\n",
+       "       MonetaryLiquidator-119  MonetaryLiquidator-120  MonetaryLiquidator-121  \\\n",
+       "10576              101.429343                   100.0               109.70225   \n",
+       "10577              101.429343                   100.0               109.70225   \n",
+       "10578              101.429343                   100.0               109.70225   \n",
+       "10579              101.429343                   100.0               109.70225   \n",
+       "10580              101.429343                   100.0               109.70225   \n",
+       "\n",
+       "       MonetaryLiquidator-122  MonetaryLiquidator-123  MonetaryLiquidator-124  \n",
+       "10576                   100.0              107.401005                   100.0  \n",
+       "10577                   100.0              107.401005                   100.0  \n",
+       "10578                   100.0              107.401005                   100.0  \n",
+       "10579                   100.0              107.401005                   100.0  \n",
+       "10580                   100.0              107.401005                   100.0  \n",
        "\n",
        "[5 rows x 125 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
